--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,5 @@ install: bundle install --jobs=3 --retry=3
 
 script:
   - bundle exec rubocop
+  - bundle exec rspec
 
-# one day...
-#  - bundle exec rspec
