move weather emoji to it's own plugin config file

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ Thumbs.db
 
 # RabbleBot config files #
 ##########################
-
 config.yml
 *.pstore
+
+# RubyMine files #
+##################
+.idea
